--- a/jd2-ishop/resources/local.properties
+++ b/jd2-ishop/resources/local.properties
@@ -1,13 +1,18 @@
 local.locbutton.name.en = EN
 local.locbutton.name.ru = RU
-local.index.headerPage = iShop
-local.index.button.registration = Registration
-local.index.button.authorization = Sign in
+local.headerPage.one = Gifts
+local.headerPage.two = handmade
+local.button.registration = Registration
+local.button.authorization = Sign in
+local.index.wood = Wood products
+local.index.leather = Leather products
+local.index.wool = Wool products
 local.authorization.headerPage = Authorization
 local.authorization.login = Login
 local.authorization.password = Password
 local.authorization.submit = Sign in
 local.authorization.failMessage =Invalid login or password
+local.authorization.ask.registr = Haven't registered yet?
 local.registration.headerPage = Registration
 local.registration.message = Please, fill in all fields
 local.registration.login = Login
@@ -21,3 +26,8 @@ local.registration.failMessage = A user with this login already exists
 local.registrationSuccess.headerName = You are registered!
 local.registrationSuccess.index = To the main page
 local.registrationSuccess.authorization = Sign in
+local.products.wood = Wood products
+local.products.leather = Leather products
+local.products.wool = Wool products
+local.products.homepage = Homepage
+local.products.price = Price:
