--- a/jd2-ishop/resources/local.properties
+++ b/jd2-ishop/resources/local.properties
@@ -4,6 +4,7 @@ local.headerPage.one = Gifts
 local.headerPage.two = handmade
 local.button.registration = Registration
 local.button.authorization = Sign in
+local.button.cart = cart
 local.index.wood = Wood products
 local.index.leather = Leather products
 local.index.wool = Wool products
@@ -31,3 +32,8 @@ local.products.leather = Leather products
 local.products.wool = Wool products
 local.products.homepage = Homepage
 local.products.price = Price:
+local.cart.message.invitation = Please, sign in to add products
+local.product.add.to.cart = Add to cart
+local.product.material = Material:
+local.product.master =Master:
+local.product.master.phone.number = Phone number:
