--- a/jd2-ishop/resources/local.properties
+++ b/jd2-ishop/resources/local.properties
@@ -5,6 +5,7 @@ local.headerPage.two = handmade
 local.button.registration = Registration
 local.button.authorization = Sign in
 local.button.cart = cart
+local.button.signout = Sign out
 local.index.wood = Wood products
 local.index.leather = Leather products
 local.index.wool = Wool products
@@ -12,6 +13,7 @@ local.authorization.headerPage = Authorization
 local.authorization.login = Login
 local.authorization.password = Password
 local.authorization.submit = Sign in
+local.authorization.errorMessage = Please, fill in all fields
 local.authorization.failMessage =Invalid login or password
 local.authorization.ask.registr = Haven't registered yet?
 local.registration.headerPage = Registration
@@ -33,7 +35,16 @@ local.products.wool = Wool products
 local.products.homepage = Homepage
 local.products.price = Price:
 local.cart.message.invitation = Please, sign in to add products
+local.cart.product = PRODUCT
+local.cart.price = PRICE
+local.cart.quantity =QUANTITY
+local.cart.total = TOTAL
+local.cart.emty.message = The cart is still empty
+local.cart.submit.button = Buy
 local.product.add.to.cart = Add to cart
 local.product.material = Material:
 local.product.master =Master:
 local.product.master.phone.number = Phone number:
+local.product.popup.add.success = The product is added to cart
+local.product.popup.already.added = The product has already been added to the cart
+local.product.popup.button = OK
