--- a/jd2-ishop/resources/local.properties
+++ b/jd2-ishop/resources/local.properties
@@ -39,8 +39,9 @@ local.cart.product = PRODUCT
 local.cart.price = PRICE
 local.cart.quantity =QUANTITY
 local.cart.total = TOTAL
-local.cart.emty.message = The cart is still empty
+local.cart.empty.message = The cart is still empty
 local.cart.submit.button = Buy
+local.cart.button.delete =Delete
 local.product.add.to.cart = Add to cart
 local.product.material = Material:
 local.product.master =Master:
